--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <footer class="l-footer l-flex l-flex-wrap footer">
              <div class="footer-munu">
                 <div class="l-flex footer-list">
-                  <div class="footer-list-title">CodePen</div>
+                  <div class="light-bold-text">CodePen</div>
                   <div class="footer-list-text">About</div>
                   <div class="footer-list-text">Blog</div>
                   <div class="footer-list-text">Advertising</div>
@@ -412,21 +412,21 @@
                   <div class="footer-list-text">Shop</div>
                 </div>
                 <div class="l-flex footer-list">
-                  <div class="footer-list-title">For</div>
+                  <div class="light-bold-text">For</div>
                   <div class="footer-list-text">Teams</div>
                   <div class="footer-list-text">Education</div>
                   <div class="footer-list-text">Privacy</div>
                   <div class="footer-list-text">Documentation</div>
                 </div>
                 <div class="l-flex footer-list">
-                  <div class="footer-list-title">Social</div>
+                  <div class="light-bold-text">Social</div>
                   <div class="footer-list-text">Challenges</div>
                   <div class="footer-list-text">Twitter</div>
                   <div class="footer-list-text">Facebook</div>
                   <div class="footer-list-text">Instagram</div>
                 </div>
                 <div class="l-flex footer-list">
-                  <div class="footer-list-title">Community</div>
+                  <div class="light-bold-text">Community</div>
                   <div class="footer-list-text">Spectrum</div>
                   <div class="footer-list-text">Teams</div>
                   <div class="footer-list-text">Code of Conduct</div>
