--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="footer-logo">
                   C<i class="fa fa-cube"></i>DEPEN
                 </div>
-                <p class="footer-list-text">
+                <p class="footer-copyright-text">
                   ©2020 CodePen <br/>
                   Demo or it didn't happen.
                 </p>
