--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <i class="fa fa-chevron-down chevron-down-position"></i>
                               </div>  
                             </div>
-                            <div class="l-aligin-center code-text">
+                            <div class="l-aligin-center code-card-text">
                               <span class="text-number">&lt;div</span>
                               <span class="text-light-warning">class</span>=<span class="text-variable-name">"rect"</span><span class="text-number">&gt;&lt;/div&gt;</span>
                             </div>
@@ -120,7 +120,7 @@
                               <i class="fa fa-chevron-down chevron-down-position"></i>
                             </div>  
                           </div>
-                          <div class="code-text">
+                          <div class="code-card-text">
                             <p class>
                               <span class="text-light-warning">.rect</span>
                               <span >{</span>
@@ -150,7 +150,7 @@
                               <i class="fa fa-chevron-down chevron-down-position"></i>
                             </div>  
                           </div>
-                          <div class="code-text">
+                          <div class="code-card-text">
                             <p class="code-text-js">
                               <span class="text-light-warning">var</span>
                               <span class="text-light-secondary">colors</span>
@@ -186,8 +186,7 @@
                       <h2 class="card-title">Build & Test</h2>
                       <p class="card-text">
                         Get work done quicker by building out entire projects or isolating code to test features and animations. Want to keep it all under wraps?
-                        <span class="text-important text-secondary">Upgrade to a &nbsp;</span>
-                        <span class="pro-account-badge">PRO</span>
+                        <span class="text-important text-secondary">Upgrade to a </span><span class="pro-account-badge">PRO</span>
                         <span class="text-important text-secondary">account</span>to keep your work private.
                       </p>
                       <a class="button button-secondary">Try the Editor</a>
