--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           C<i class="fa fa-cube"></i>DE PEN
         </h1>
         <div class="get-start">
-          <div class="get-start-text">
+          <div class="sidebar-get-start-text">
             TRY OUR ONLINE EDITOR
           </div>
-          <div class="button logo-button">
+          <div class="button button-logo">
             <div class="sidebar-intro-text">
               Start Coding
             </div>
@@ -102,7 +102,7 @@
                                 <h4 class="code-card-title-text">HTML</h4>
                               </div>  
                               <div class="l-flex l-align-center header-icon">
-                                <i class="fa fa-chevron-down chevron-down-position"></i>
+                                <i class="fa fa-chevron-down code-card-chevron-down-position"></i>
                               </div>  
                             </div>
                             <div class="l-aligin-center code-card-text">
@@ -117,7 +117,7 @@
                               <h4 class="code-card-title-text">SCSS</h4>
                             </div>  
                             <div class="l-flex l-align-center header-icon">
-                              <i class="fa fa-chevron-down chevron-down-position"></i>
+                              <i class="fa fa-chevron-down code-card-chevron-down-position"></i>
                             </div>  
                           </div>
                           <div class="code-card-text">
@@ -136,7 +136,7 @@
                               <span class="text-number">0%</span><span >,</span>
                             </p>
                             <p class="l-indent-4rem">
-                              <span class="text-light-warning">$dark-gray</span><span class="text-number">100%</span><span >);</span><span class="text-blink">|</span>
+                              <span class="text-light-warning">$dark-gray</span><span class="text-number">100%</span><span >);</span><span class="code-card-text-blink">|</span>
                             </p>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                               <h4 class="code-card-title-text">JS</h4>
                             </div>  
                             <div class="l-flex l-align-center header-icon">
-                              <i class="fa fa-chevron-down chevron-down-position"></i>
+                              <i class="fa fa-chevron-down code-card-chevron-down-position"></i>
                             </div>  
                           </div>
                           <div class="code-card-text">
