--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                               </div>  
                             </div>
                             <div class="l-aligin-center code-card-text">
-                              <span class="text-number">&lt;div</span>
-                              <span class="text-light-warning">class</span>=<span class="text-variable-name">"rect"</span><span class="text-number">&gt;&lt;/div&gt;</span>
+                              <span class="code-card-text-number">&lt;div</span>
+                              <span class="text-light-warning">class</span>=<span class="code-card-text-variable-name">"rect"</span><span class="code-card-text-number">&gt;&lt;/div&gt;</span>
                             </div>
                         </div>
                         <div class="code-card-square code-card-css">
@@ -126,17 +126,17 @@
                               <span >{</span>
                             </p>
                             <p class="l-indent-2rem">
-                              <span class="text-property">background</span><span >:</span><span class="text-light-warning"> linear-gradient</span><span >(</span>
+                              <span class="code-card-text-property">background</span><span >:</span><span class="text-light-warning"> linear-gradient</span><span >(</span>
                             </p>
                             <p class="l-indent-4rem">
-                              <span class="text-number">-119deg</span><span >,</span>
+                              <span class="code-card-text-number">-119deg</span><span >,</span>
                             </p>
                             <p class="l-indent-4rem">
                               <span class="text-light-warning">$gray</span>
-                              <span class="text-number">0%</span><span >,</span>
+                              <span class="code-card-text-number">0%</span><span >,</span>
                             </p>
                             <p class="l-indent-4rem">
-                              <span class="text-light-warning">$dark-gray</span><span class="text-number">100%</span><span >);</span><span class="code-card-text-blink">|</span>
+                              <span class="text-light-warning">$dark-gray</span><span class="code-card-text-number">100%</span><span >);</span><span class="code-card-text-blink">|</span>
                             </p>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                               <span > =</span>
                             </p>
                             <p class="code-text-js">
-                              <span >[</span><span class="text-variable-name">"#74B087"</span>,<span class="text-variable-name">"#DE7300"</span>,<span class="text-variable-name">"#74B087"<span >];</span>
+                              <span >[</span><span class="code-card-text-variable-name">"#74B087"</span>,<span class="code-card-text-variable-name">"#DE7300"</span>,<span class="code-card-text-variable-name">"#74B087"<span >];</span>
                               
                               
                             </p>
